# QT_WIDGETS

./: README.md  main.py  pyproject.toml  qt_core.py
gui/pages/: pages.ui  ui_pages.py
gui/windows/main_window/: ui_main_window.py
