[tool.poetry]
name = "qt_widgets"
version = "0.1.0"
description = ""
authors = ["NB-MRNSMS <mrsoutomaior@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "6.3.0"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
